# tiPBD

./: .gitattributes  .gitignore  .gitmodules  P.mtx  R.mtx  README.md  args.ini  b1.txt  buildbinding.bat  buildbinding_debug.bat  buildcuda.bat  buildcuda_debug.bat  clean_results.ps1  debug.txt  kineticEnergy.txt  main.py  mesh_data.py  monitor.py  potentialEnergy.txt  pyproject.toml  pytest.ini  requirements.txt  run.py  run_note.txt  setup.py  solver_diagnostic.py  stable_fluid.py  tiPBD.py  totalEnergy.txt
PBD-mass-spring/: tiPBD.py
PBD-meshtaichi/: tiPBD.py
XPBD-FEM/: arap_3d.py  arap_3d_grad.py  arap_3d_mg.py  arap_3d_mggrad.py  beam.py  compute_R.py  show_mesh.py
cpp/: .gitignore  readme.md
cpp/AMGX/: README.md
cpp/amgcg_vcycle_cuda/: CMakeLists.txt  cloth3d.py
cpp/mgcg_cuda/: .gitignore  CMakeLists.txt  CSR.h  README.md  SpMatData.h  Vec.h  amgcl_solver.cpp  amgcl_solver.h  amgcuda_solver.cpp  amgcuda_solver.h  build.bat  build.py  common.h  cuda_utils.cuh  cusparse_wrappers.cu  cusparse_wrappers.h  eigen_solver.cpp  eigen_solver.h  fastfill.cpp  fastfill.cu  fastfill.cu_bak  fastfill.h  fastmg copy.cu_bak  fastmg.cu  fastmg.cu_bak  fastmg.h  graph_coloring.cpp  initFillCloth.cpp  kernels.cu  kernels.cuh  kernels_bak  kernels_wrappers.cu_bak  kernels_wrappers_h_bak  linear_solver.cpp  linear_solver.h  main.cpp  main_softbody.cpp  meshio_obj.cpp  meshio_obj.h  meshio_tetgen.cpp  (+23 more)
cpp/mgcg_cuda/binding/: CMakeLists.txt  binding.cpp
cpp/mgcg_cuda/binding/example/: solve_soft.py
cpp/mgcg_cuda/setupmg/: setupmg.cpp
cpp/mgxpbd/: CMakeLists.txt  README.md  mgxpbd.cpp
cpp/pybind/: .gitignore  CMakeLists.txt  fillA.cpp  rigid_body_modes.cpp
cpp/rigidbodymode/: CMakeLists.txt  readme.md  test_rigid_body_modes.py
cpp/spgemm/: .gitignore  CMakeLists.txt  README.md  spgemm.cu  spgemm.py  test_spgemm.py
cpp/test_ctypes/: CMakeLists.txt  testLib.cpp  test_ctypes.py
cpp/utlis/: CMakeLists.txt  ECL-GC_12.cu  ECLgraph.h  Softbody_cuda.cu  graph_coloring.cpp  mm2ecl.cpp  multi_color_gauss_seidel.cpp  parallel_rb.cpp  readme.md  test_graph_coloring.py  timer.h
cpp/utlis/ECL_GC/: ECL-GC-ColorReduction_12.cu  ECLGraph.h  README.md  auto.py  obj2egr.cpp
data/: .gitignore
data/config/: AGGREGATION_JACOBI.json  FGMRES_CLASSICAL_AGGRESSIVE_PMIS.json  agg_cheb4.json  arap_meshtaichi.ini  default_args.ini  strain_based_dynamics.ini
data/misc/: P.mtx  R.mtx  num_adjacent_edge.txt
data/model/: bunny_fluid.ply  readme.md
data/scene/: arap.json  arap_bunny.json  arap_bunny_nogui.json  arap_cube_multigrid.json  arap_hpbd.json  arap_meshtaichi.json  arap_sdf.json  bar.json  bunny_fluid.json  mass_spring_volumetric.json  neohooken.json  pbf2d.json  pbf3d.json  shape_matching_rigidbody.json  strain_based_dynamics.json  template.json
doc/: add_codes.md  file_structure.md  mesh_io.md  sdf.md
draft/: Untitled-2.py  draft.py  mt.py  svd.py  可视化矩阵.ipynb  推导能量求导.ipynb  推导能量求导.py  能量计算公式.ipynb
engine/: collider.py  common_args.py  data_center.py  debug.py  debug_info.py  file_utils.py  gradient.py  init_extlib.py  line_search.py  log.py  mesh_io.py  metadata.py  p2g.py  physical_base.py  physical_data.py  sdf.py  solver.py  solver_main.py  ti_kernels.py  util.py  utils.py  visualize.py
engine/cloth/: C_and_gradC_distance.py  PXPBD.py  bending.py  build_cloth_mesh.py  cloth2d.py  cloth3d.py  cloth3d_GMG.py  cloth3d_GaussNewton.py  cloth3d_acc.py  cloth3d_lumped.py  constraints.py  fill_A.py  muller  newton_method.py  newton_method_legacy.py  physical_data.py  primal_xpbd.py  tri_cloth3d.py
engine/constraints/: distance_constraints.py
engine/fem/: arap.py  arap_3d_mggrad.py  arap_autodiff.py  compute_R.py  fem_base.py  mesh.py  neohooken.py  utils.py
engine/fluid/: fluid.py  pbf.py  pbf2d_sparse.py  pbf_2d.py  pbf_2d_ggui.py  pbf_3d.py
engine/linearSystem/: conjugate_gradient.py  generate_psd.py  generate_spd.py  mgcg_cuda.py  sparse_gauss_seidel.py  spmv.py
engine/rigid/: rigidbody.py
json/: attach64.json  config.json
legacy/: tiReadMesh.py
models/: armadillo.txt  bunny.face  bunny.node  toy.geo
profiling/: README.md
pybind/: CMakeLists.txt  RBM_petsc.cpp  amg_cg_solve_bind.cpp  fillA.cpp  init_adj.cpp  readme.md  rigid_body_modes.cpp  test_fillA.py  test_rigid_body_modes.py
pybind/mgxpbd/: CMakeLists.txt  readme.md
result/: __init__.py  clean.py  convert_exr.py  inertialEnergy.txt  list_dir_size.py  rename_sequence.py  video.py
script/: AIR.py  CR.py  agg_vis_demo1.py  agg_vis_demo2.py  algebraic_distance.py  amg_iter_bug.py  amg_solvers.py  build_face.py  commonP.py  compare_adaptiveSA.py  compare_near_nullspace.py  compare_rigidbodymode.py  complementary_graph.py  concatenate_png.py  demo_my_own_mg.py  different_N.py  different_pyamg.py  divide_cube_to_5_tetra.py  draw_constantly_r.py  draw_energy.py  draw_frequency.py  draw_from_json.py  draw_from_log.py  draw_residual.py  edgeAMG.py  generate_cube_mg.py  houdini_geo_tet_to_tetgen.py  inspect_UA.ipynb  judge_positive_definite.py  line_graph.py  noInject.py  optimize_aggregation.py  prof.ps1  reproduce_LFA.py  reproduce_pyamg.py  rootnode.py  ruge_stuben.py  small_example_show_TG_spectral_radius.ipynb  solve_phase.py  solver_diagnostic.py  (+6 more)
scripts/: draw_energy.py  houdini_geo_tet_to_tetgen.py  show_mesh.py
test/: __init__.py  testCheby.py  test_CG.py  test_CG_baoqian.py  test_amg_cuda.py  test_amg_python.py  test_amg_vs_jacobian.py  test_barycentric_coord.py  test_cloth.py  test_clothdata.py  test_collider.py  test_config.py  test_coo.py  test_dpg.py  test_gradient.py  test_init_bending.py  test_jacobian_iter.py  test_kmeans.py  test_kmeans2.py  test_matrix_free_A.py  test_matrixfree.py  test_mesh_io.py  test_newton_method.py  test_p2g.py  test_pyamg.py  test_reproduce_pyamg.py  test_residual.py  test_sdf.py  test_soft.py  test_solve_Axb.py  test_symrcm.py  test_utils.py  test_visualize.py
ui/: argparser.py  config_builder.py  dearpygui.py  dpg_plot_residual.py  filedialog.py  ggui.py  parse_cli.py  parse_commandline_args.py  ray.py  selector.py  selector_ray.py  webui.py
(+285 files in other folders)
